# mympltools

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.chglog/: config.yml
.github/workflows/: lint.yml  test.yml
examples/: Examples.ipynb
mympltools/: __init__.py  bounded.py  color.py  fitting.py  npt_compat.py  plot.py  style.py  version.py
scripts/: make-release.sh
tests/: test_bounded.py  test_style.py  test_version.py
