[tool.poetry]
name = "mympltools"
version = "21.11.1-alpha.0"
description = "My personal utilities and settings for Matplotlib."
authors = ["Takahiro Ueda <tueda@st.seikei.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.7"

importlib-metadata = { version = ">=1.0", python = "<3.8" }
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
taskipy = "^1.10.1"
# for vscode
black = "^22.3.0"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise AssertionError()",
    "return NotImplemented",
]

[tool.isort]
profile = "black"

[tool.mypy]
pretty = true
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["cycler.*", "importlib_metadata", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--cov-report=html",
    "--cov-report=term",
    "--cov=mympltools",
    "--doctest-modules",
]

[tool.taskipy.tasks]
# Prepare a development environment.
prepare = "pre-commit install && pre-commit install --hook-type commit-msg"

# Run linters (+ fix).
lint = "pre-commit run --all-files"

# Run tests.
test = "pytest"
